# squeezeLine

./: README.md
documentation/: dev_environment.md  milestones.md  project_big_step.md  project_requirements.md  project_wannabe.md  sqeezeLine.wannabe.drawio
documentation/resources/: sqeezeLine.reasonableBigGoal.drawio  sqeezeLine.reasonableGoal.drawio
examples/qt-quick/: CMakeLists.txt  main.qml
examples/qt-widget/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui
